# SlurmCommander

./: README.md  staging.ini
roles/manage_job/tasks/: dump_job_info.yml  job_stats.yml
roles/manage_jobs/tasks/: cancel_job.yml  cancel_jobs_partition.yml  dump_job_info.yml  show_job_details.yml
roles/manage_jobs/vars/: job_args.yml
roles/monitor_job/tasks/: show_job_details.yml  show_jobs.yml  show_jobs_partition.yml
roles/monitor_job/vars/: job_args.yml
roles/multicore_job/files/: CMakeLists.txt  multicore.cpp  run.sh
roles/multicore_job/tasks/: submit_multicore_job.yml
roles/multicore_job/vars/: job_args.yml
roles/multinode_job/files/: CMakeLists.txt  multinode.cpp  run.sh
roles/multinode_job/tasks/: submit_multinode_job.yml
roles/multinode_job/vars/: job_args.yml
roles/simple_job/files/: simple.py
roles/simple_job/tasks/: submit_simple_job.yml
roles/simple_job/vars/: job_args.yml
roles/simple_job_array/tasks/: submit_simple_job_array.yml
roles/simple_job_array/vars/: job_args.yml
